fixed up spacing issues, and addressed issue #1, you may now choose the direction of your pageslide (left or right only).

--- a/jquery.pageslide.css
+++ b/jquery.pageslide.css
@@ -6,14 +6,9 @@
     position: fixed;
     width: 0;
     top: 0;
-    right: 0;
     height: 100%;
     background-color: #000;
 }
 
 #pageslide-content {
-}
-
-#pageslide-content h2 {
-    color: #C60;
 }
